syntax = "proto3";

package ProtoTransport;

message Stop {
    repeated string buses = 1;
}

message Bus {
    uint32 stops = 1;
    uint32 unique_stops = 2;
    uint32 road_route = 3;
    double linear_route = 4;
}

message Database {
    repeated string stop_names = 1;
    repeated Stop stops = 2;
    repeated string bus_names = 3;
    repeated Bus buses = 4;
}